
{{$NEXT}}

1.20150123 2015-01-22 America/Los_Angeles

 - enable lazy evaluation of SPF & DKIM (Ricardo Signes)
 - check ShareDir for mail-dmarc.ini, if not in a standard location
 - map DKIM status=invalid to status->temperror
 - add config arg to dmarc_update_public_suffix_list (Ricardo Signes)
 - Send only a single cc email (Marc Bradshaw)
 - DMARC: update docs to show SPF one-shot syntax
 - PurePerl: one shot accepts a Mail::DKIM::Verifier
 - trap errors thrown by is_dkim_aligned
 - INSTALL: added 'install mail-dmarc.ini' step
 - Show "new record" output only in verbose mode. (Marc Bradshaw)
 - require DBIx::Simple 1.35 (was any)

1.20141230 2014-12-29 America/Los_Angeles

 - Add script to update the public suffix list file (Marc Bradshaw)

1.20141206 2014-12-05 America/Los_Angeles

 - Delete reports with no valid rua (Marc Bradshaw)
 - Ignore DomainKeys signatures (Marc Bradshaw)
 - allow configurable delay between sending emails (Marc Bradshaw)
 - permit absolute paths for public suffix list file location (Marc Bradshaw)
 - fix lookup for *.foo entries (Marc Bradshaw)

1.20141119 2014-11-18 America/Los_Angeles

 - added auto_save option for validation reports
 - updated bin/install_deps.pl

1.20141030 2014-10-30 America/Los_Angeles

 - percent policy logic wasn't being applied correctly
 - fix for reasons not stored in SQL

1.20140711 2014-07-10 America/Los_Angeles

 - Store/SQL: use full sql name in WHERE clause
 - DMARC/HTTP: added error handling and tests
 - removed excess comma in mail_dmarc_schema.mysql
 - added quotes around ($commit || ''), just in case
 - try IMAP fetch without SORT if no results, for IMAP servers like Gmail that don't support SORT
 - warn but still pass test if DNS query fails

1.20140623 2014-06-23 America/Los_Angeles

 - updated tests to accomodate the cached PSL

1.20140622 2014-06-22 America/Los_Angeles

 - load PSL into hash to speed subsequent lookups (esp for daemon)
 - uncommented Net::Server in Prereqs/Recommended section