@@ -126,6 +126,9 @@ Net::IMAP::Simple         = 0
 Net::Server               = 2
 Net::HTTP                 = 0
 
+[Prereqs / TestRecommends]
+Test::Output              = 0
+
 ; TODO: neither the FileFinder nor the skip work for ExecDir. I would rather
 ; not install bin/install_deps.pl
 [FileFinder::ByName / MyBin]
